// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CryptoTippingModal Modal Rendering matches snapshot 1`] = `
<div
  animate="[object Object]"
  aria-labelledby="tip-modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center bg-black/60 backdrop-blur-sm"
  exit="[object Object]"
  initial="[object Object]"
  role="dialog"
>
  <div
    animate="[object Object]"
    class="w-full max-w-md bg-white dark:bg-gray-900 rounded-3xl shadow-2xl overflow-hidden"
    initial="[object Object]"
  >
    <div
      class="bg-gradient-to-r from-yellow-500 to-orange-500 p-6 text-white"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="w-8 h-8"
            data-testid="dollar-sign-icon"
          />
          <h2
            class="text-2xl font-bold"
            id="tip-modal-title"
          >
            Send Tip
          </h2>
        </div>
        <button
          class="p-2 hover:bg-white/20 rounded-lg"
        >
          <div
            class="w-5 h-5"
            data-testid="x-icon"
          />
        </button>
      </div>
    </div>
    <div
      class="p-6 space-y-4"
    >
      <div>
        <label
          class="block text-sm font-medium mb-2"
        >
          Amount
        </label>
        <div
          class="flex gap-2"
        >
          <input
            class="flex-1 px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl focus:outline-none focus:ring-2 focus:ring-yellow-500"
            placeholder="0.0"
            type="number"
            value=""
          />
          <select
            class="px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl"
          >
            <option
              value="ETH"
            >
              ETH
            </option>
            <option
              value="USDC"
            >
              USDC
            </option>
            <option
              value="DAI"
            >
              DAI
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          class="block text-sm font-medium mb-2"
        >
          Message (optional)
        </label>
        <textarea
          class="w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl focus:outline-none focus:ring-2 focus:ring-yellow-500"
          placeholder="Add a note..."
          rows="3"
        />
      </div>
      <button
        class="w-full py-3 bg-gradient-to-r from-yellow-500 to-orange-500 hover:from-yellow-600 hover:to-orange-600 text-white rounded-xl font-semibold flex items-center justify-center gap-2"
      >
        <div
          class="w-5 h-5"
          data-testid="send-icon"
        />
        Send Tip
      </button>
    </div>
  </div>
</div>
`;

exports[`CryptoTippingModal Snapshot Testing matches snapshot when closed 1`] = `null`;

exports[`CryptoTippingModal Snapshot Testing matches snapshot when open 1`] = `
<div
  animate="[object Object]"
  aria-labelledby="tip-modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center bg-black/60 backdrop-blur-sm"
  exit="[object Object]"
  initial="[object Object]"
  role="dialog"
>
  <div
    animate="[object Object]"
    class="w-full max-w-md bg-white dark:bg-gray-900 rounded-3xl shadow-2xl overflow-hidden"
    initial="[object Object]"
  >
    <div
      class="bg-gradient-to-r from-yellow-500 to-orange-500 p-6 text-white"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="w-8 h-8"
            data-testid="dollar-sign-icon"
          />
          <h2
            class="text-2xl font-bold"
            id="tip-modal-title"
          >
            Send Tip
          </h2>
        </div>
        <button
          class="p-2 hover:bg-white/20 rounded-lg"
        >
          <div
            class="w-5 h-5"
            data-testid="x-icon"
          />
        </button>
      </div>
    </div>
    <div
      class="p-6 space-y-4"
    >
      <div>
        <label
          class="block text-sm font-medium mb-2"
        >
          Amount
        </label>
        <div
          class="flex gap-2"
        >
          <input
            class="flex-1 px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl focus:outline-none focus:ring-2 focus:ring-yellow-500"
            placeholder="0.0"
            type="number"
            value=""
          />
          <select
            class="px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl"
          >
            <option
              value="ETH"
            >
              ETH
            </option>
            <option
              value="USDC"
            >
              USDC
            </option>
            <option
              value="DAI"
            >
              DAI
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          class="block text-sm font-medium mb-2"
        >
          Message (optional)
        </label>
        <textarea
          class="w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl focus:outline-none focus:ring-2 focus:ring-yellow-500"
          placeholder="Add a note..."
          rows="3"
        />
      </div>
      <button
        class="w-full py-3 bg-gradient-to-r from-yellow-500 to-orange-500 hover:from-yellow-600 hover:to-orange-600 text-white rounded-xl font-semibold flex items-center justify-center gap-2"
      >
        <div
          class="w-5 h-5"
          data-testid="send-icon"
        />
        Send Tip
      </button>
    </div>
  </div>
</div>
`;

exports[`CryptoTippingModal Snapshot Testing matches snapshot with data filled 1`] = `
<div
  animate="[object Object]"
  aria-labelledby="tip-modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center bg-black/60 backdrop-blur-sm"
  exit="[object Object]"
  initial="[object Object]"
  role="dialog"
>
  <div
    animate="[object Object]"
    class="w-full max-w-md bg-white dark:bg-gray-900 rounded-3xl shadow-2xl overflow-hidden"
    initial="[object Object]"
  >
    <div
      class="bg-gradient-to-r from-yellow-500 to-orange-500 p-6 text-white"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="w-8 h-8"
            data-testid="dollar-sign-icon"
          />
          <h2
            class="text-2xl font-bold"
            id="tip-modal-title"
          >
            Send Tip
          </h2>
        </div>
        <button
          class="p-2 hover:bg-white/20 rounded-lg"
        >
          <div
            class="w-5 h-5"
            data-testid="x-icon"
          />
        </button>
      </div>
    </div>
    <div
      class="p-6 space-y-4"
    >
      <div>
        <label
          class="block text-sm font-medium mb-2"
        >
          Amount
        </label>
        <div
          class="flex gap-2"
        >
          <input
            class="flex-1 px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl focus:outline-none focus:ring-2 focus:ring-yellow-500"
            placeholder="0.0"
            type="number"
            value="10"
          />
          <select
            class="px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl"
          >
            <option
              value="ETH"
            >
              ETH
            </option>
            <option
              value="USDC"
            >
              USDC
            </option>
            <option
              value="DAI"
            >
              DAI
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          class="block text-sm font-medium mb-2"
        >
          Message (optional)
        </label>
        <textarea
          class="w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl focus:outline-none focus:ring-2 focus:ring-yellow-500"
          placeholder="Add a note..."
          rows="3"
        >
          Test message
        </textarea>
      </div>
      <button
        class="w-full py-3 bg-gradient-to-r from-yellow-500 to-orange-500 hover:from-yellow-600 hover:to-orange-600 text-white rounded-xl font-semibold flex items-center justify-center gap-2"
      >
        <div
          class="w-5 h-5"
          data-testid="send-icon"
        />
        Send Tip
      </button>
    </div>
  </div>
</div>
`;
